gst-libs/gst/pbutils/pbutils.c
@@ -60,6 +60,25 @@
 
 #include "gst/gst-i18n-plugin.h"
 
+static void
+_init_locale_text_domain (void)
+{
+#ifdef ENABLE_NLS
+  GST_DEBUG ("binding text domain %s to locale dir %s", GETTEXT_PACKAGE,
+      LOCALEDIR);
+  bindtextdomain (GETTEXT_PACKAGE, LOCALEDIR);
+  bind_textdomain_codeset (GETTEXT_PACKAGE, "UTF-8");
+#endif
+}
+
+void
+gst_pb_utils_init_locale_text_domain (void)
+{
+  static GOnce locale_init_once = G_ONCE_INIT;
+
+  g_once (&locale_init_once, _init_locale_text_domain, NULL);
+}
+
 /**
  * gst_pb_utils_init:
  *
@@ -79,12 +98,7 @@ gst_pb_utils_init (void)
     GST_LOG ("already initialised");
     return;
   }
-#ifdef ENABLE_NLS
-  GST_DEBUG ("binding text domain %s to locale dir %s", GETTEXT_PACKAGE,
-      LOCALEDIR);
-  bindtextdomain (GETTEXT_PACKAGE, LOCALEDIR);
-  bind_textdomain_codeset (GETTEXT_PACKAGE, "UTF-8");
-#endif
+  gst_pb_utils_init_locale_text_domain ();
 
   inited = TRUE;
 }
